# OpenGL-Examples

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  imgui.ini
examples/: CMakeLists.txt
examples/boids/: main.cpp  new_buffer.h  settings.h
examples/boids/shaders/: compute.glsl  frag.glsl  vert.glsl
examples/collision/: ball.cpp  main.cpp
examples/compute/: main.cpp
examples/compute/shaders/: compute.glsl  geom.glsl  vert.glsl  vert.glsl.old
examples/grid/: main.cpp
examples/grid_opencl/: light_map.h  main.cpp
examples/grid_opencl/shaders/: comp_frag.glsl  comp_frag2.glsl  comp_vert.glsl  fragment0.glsl  fragment1.glsl  fragment2.glsl  light_map.frag  light_map.vert  vertex0.glsl  vertex1.glsl  vertex2.glsl
examples/opencl/: main.cpp  main.old  main.old.cc
examples/opencl/shaders/: frag.glsl  geom.glsl  kernel.cl  vert.glsl
examples/subroutines/: main.cpp
examples/textures/: main.cpp
include/GameOfLife/: game_of_life.hpp  game_of_life_opencl.hpp  game_of_life_serial.hpp
include/OpenGLLib/: app.h  buffer.h  core.h  shader.h
include/glcore/: buffer.h  camera.h
src/: CMakeLists.txt  app.cpp  buffer.cpp  camera.cpp  shader.cpp
src/GameOfLife/: CMakeLists.txt  game_of_life_opencl.cpp  game_of_life_serial.cpp  kernel.cl
src/OpenGLLib/: CMakeLists.txt  app.cpp  buffer.cpp  camera.cpp  shader.cpp  texture.cpp
